# cardboard-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: builtin_layouts.rs  render_sample_project.rs  version_card.rs
examples/projects/builtin-layouts/: default.csv  icons.csv
examples/projects/sample/: alpha.csv  beta.csv  default.layout  fancy.layout  images.layout  project.conf
src/: lib.rs
src/config/: colors.rs  mod.rs  styles.rs  util.rs
src/config/sheets/: layout.rs  mod.rs  placement.rs  sizes.rs  units.rs
src/context/: mod.rs
src/data/: card.rs  globals.rs  mod.rs  project.rs
src/format/: mod.rs  parser.rs
src/layout/: mod.rs  printing.rs  templates.rs
src/layout/builtin/: default.layout  icons.layout
src/layout/model/: geometry.rs  mod.rs
src/layout/model/elements/: containers.rs  image.rs  mod.rs  shapes.rs  text.rs
src/layout/model/styles/: color.rs  fill.rs  font.rs  mod.rs  only_if.rs  solid.rs  stroke.rs  text.rs
src/renderer/: mod.rs
src/renderer/skia/: drawing.rs  mod.rs  pdf.rs
