[package]
name = "cardboard"
version = "0.1.0"
edition = "2021"
default-run = "cardboard"

# Build targets

[lib]
name = "cardboard"
path = "src/lib.rs"

[[bin]]
name = "cardboard"
path = "bin/main.rs"

[dependencies]
miette = { version = "5.9.0", features = ["fancy"] }
knuffel = "3.2.0"
handlebars = "4.3.7"
serde = { version = "1.0.166", features = ["derive"] }
syn = "2.0.21"
skia-safe = { version = "0.63.0", features = ["textlayout"] }
thiserror = "1.0.43"
