[package]
name = "cardboard"
version = "0.1.0"
edition = "2021"
default-run = "cardboard"
authors = ["David Hollis <david@hollis.computer>"]

# Build targets

[lib]
name = "cardboard"
path = "src/lib.rs"

[[bin]]
name = "cardboard"
path = "bin/main.rs"

[[example]]
name = "version-card"
path = "examples/version_card.rs"

[[example]]
name = "render-sample-project"
path = "examples/render_sample_project.rs"

[[example]]
name = "builtin-layouts"
path = "examples/builtin_layouts.rs"

[dependencies]
miette = { version = "5.9.0", features = ["fancy"] }
knuffel = "3.2.0"
handlebars = "4.3.7"
serde = { version = "1.0.166", features = ["derive"] }
syn = "2.0.21"
skia-safe = { version = "0.63.0", features = ["textlayout"] }
thiserror = "1.0.43"
lazy_static = "1.4.0"
regex = "1.9.1"
csv = "1.2.2"
calamine = "0.21.2"
log = "0.4.20"
log4rs = "1.2.0"
chrono = "0.4.26"
clap = { version = "4.4.2", features = ["derive"] }
sys-locale = "0.3.1"
oxilangtag = "0.1.3"
